print out to file does not include RSSI values when packet details is deselected (with packet summary selected)
This issue was migrated from bug 4852 in our old bug tracker.
Original bug information:
Reporter: krains
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: Windows XP
Platform: x86
Version: 1.2.8
Attachments:
WireShark_Print_Out_to_File_No_RSSI_Values.docx: print out to file detail showing failure
ICShop_addinhandset_test_USSMakin_1st500.pcap: wireless capture file used to 'see' the problem