Copy over revisions from the trunk:

------------------------------------------------------------------------
r33282 | jake | 2010-06-22 00:52:06 -0700 (Tue, 22 Jun 2010) | 3 lines
Changed paths:
   M /trunk/epan/dissectors/packet-ppi.c

Fix for bug 4852:
Don't short circuit dissection if tree==NULL when column values are to be set.
------------------------------------------------------------------------
r33283 | stig | 2010-06-22 01:49:12 -0700 (Tue, 22 Jun 2010) | 3 lines
Changed paths:
   M /trunk/gtk/main_proto_draw.c

Highlight correct number of bytes when highlighted hex dump ends at the end
of the first block.
------------------------------------------------------------------------
r33286 | stig | 2010-06-22 04:54:45 -0700 (Tue, 22 Jun 2010) | 2 lines
Changed paths:
   M /trunk/doc/README.developer
   M /trunk/epan/proto.c

Update to reflect changes in defines: REP_* > ENC_*
------------------------------------------------------------------------
r33330 | etxrab | 2010-06-26 09:39:18 -0700 (Sat, 26 Jun 2010) | 3 lines
Changed paths:
   M /trunk/asn1/s1ap/s1ap.cnf
   M /trunk/epan/dissectors/packet-s1ap.c

From KATAOKA Toshihiro:
3GPP S1AP Transparent Container.
https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=4913
------------------------------------------------------------------------
r33301 | stig | 2010-06-23 04:57:16 -0700 (Wed, 23 Jun 2010) | 3 lines
Changed paths:
   M /trunk/epan/frame_data.c

Ensure the "Delta time displayed" is always zero for the first displayed
packet, and not the delta from the first captured package.
------------------------------------------------------------------------
r33304 | stig | 2010-06-23 09:49:17 -0700 (Wed, 23 Jun 2010) | 2 lines
Changed paths:
   M /trunk/gtk/conversations_table.c
   M /trunk/gtk/dlg_utils.c
   M /trunk/gtk/stock_icons.c
   M /trunk/gtk/stock_icons.h

Added a "Follow Stream" button to the conversations dialog.
------------------------------------------------------------------------
r33305 | stig | 2010-06-23 12:49:33 -0700 (Wed, 23 Jun 2010) | 3 lines
Changed paths:
   M /trunk/gtk/conversations_table.c

Add the "Follow Stream" button to the TCP conversations and UDP conversations
dialog.
------------------------------------------------------------------------
r33312 | etxrab | 2010-06-24 03:42:13 -0700 (Thu, 24 Jun 2010) | 5 lines
Changed paths:
   M /trunk/epan/dissectors/packet-gsm_a_rr.c

from Sylvain Munaut:
SDCCH8 subchannel decoding error in GSM RR dissector 
Summary:  SDCCH8 subchannel decoding error in GSM RR dissector  

https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=4910
------------------------------------------------------------------------
r33315 | stig | 2010-06-24 11:07:40 -0700 (Thu, 24 Jun 2010) | 5 lines
Changed paths:
   M /trunk/epan/proto.c

Ensure we use the numeric value when creating a filter from a custom column
entry displaying a integer value.  The resolved string can contain a space,
and our routines does not quote integer values, and A DEC_HEX/HEX_DEC
combination will never match.
------------------------------------------------------------------------
r33319 | stig | 2010-06-25 02:58:25 -0700 (Fri, 25 Jun 2010) | 2 lines
Changed paths:
   M /trunk/epan/uat_load.l

Run uat->post_update_cb() in uat_load().
------------------------------------------------------------------------


Copy over with manual intervention:

------------------------------------------------------------------------
r33294 | etxrab | 2010-06-22 21:50:52 -0700 (Tue, 22 Jun 2010) | 3 lines
Changed paths:
   M /trunk/AUTHORS
   M /trunk/asn1/lte-rrc/lte-rrc.cnf
   M /trunk/asn1/s1ap/packet-s1ap-template.c
   M /trunk/asn1/s1ap/s1ap.cnf
   M /trunk/epan/dissectors/packet-lte-rrc.c
   M /trunk/epan/dissectors/packet-lte-rrc.h
   M /trunk/epan/dissectors/packet-s1ap.c

FromToshihiro Kataoka:
Dissect 3GPP S1AP UE Capability Info Indication.
https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=4904
------------------------------------------------------------------------

svn path=/trunk-1.4/; revision=33417